# tribeca

./: .eslintrc.cjs  .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  README.md  ci.nix  flake.nix  package.json  tsconfig.json
.github/workflows/: programs-e2e.yml  programs-unit.yml  release.yml
programs/govern/: Cargo.toml  README.md
programs/govern/src/: account_structs.rs  account_validators.rs  events.rs  lib.rs  macros.rs  proposal.rs  state.rs
programs/govern/src/instructions/: activate_proposal.rs  cancel_proposal.rs  create_governer.rs  mod.rs  new_vote.rs  proposal_create_event.rs  queue_proposal.rs
programs/locked-voter/: Cargo.toml  README.md
programs/locked-voter/src/: account_structs.rs  events.rs  lib.rs  locker.rs  macros.rs  state.rs
programs/locked-voter/src/instructions/: activate_proposal.rs  approve_program_lock_privilege.rs  cast_vote.rs  exit.rs  lock.rs  lock_permissionless.rs  lock_with_whitelist.rs  lock_with_whitelist_entry.rs  mod.rs  new_escrow.rs  new_locker.rs  revoke_program_lock_privilege.rs  set_locker_params.rs  set_vote_delegate.rs  whitelist.rs
programs/locked-voter/well-known/: Cargo.toml  README.md
programs/locked-voter/well-known/src/: lib.rs
programs/simple-voter/: Cargo.toml  README.md
programs/simple-voter/src/: account_validators.rs  lib.rs  macros.rs  state.rs  token_cpi.rs
programs/simple-voter/src/processor/: mod.rs  proposer.rs  voter.rs
programs/whitelist-tester/: Cargo.toml  README.md
programs/whitelist-tester/src/: lib.rs
scripts/: pull-smart-wallet.sh
src/: constants.ts  sdk.ts
src/programs/: govern.ts  index.ts  lockedVoter.ts  simpleVoter.ts
src/wrappers/govern/: govern.ts  governor.ts  index.ts  pda.ts  pdaSync.ts  proposal.ts  setup.ts  types.ts
src/wrappers/lockedVoter/: escrow.ts  index.ts  locker.ts  pda.ts  pdaSync.ts  setup.ts
src/wrappers/simpleVoter/: electorate.ts  index.ts  pda.ts  setup.ts  types.ts
tests/: execute-proposal.spec.ts  govern.spec.ts  locked-voter.spec.ts  simple-voter.spec.ts  test-key.json
tests/workspace/: index.ts  whitelist-tester.ts  workspace.ts
ts/: index.html  modules.html
ts/assets/: search.js
ts/classes/: GovernWrapper.html  GovernorWrapper.html  LockerWrapper.html  SimpleVoterWrapper.html  TribecaSDK.html  VoteEscrow.html
ts/enums/: ProposalState.html  VoteSide.html
ts/interfaces/: TribecaPrograms.html
