[package]
name = "govern"
version = "0.3.2"
description = "Handles proposal creation, lifecycle, voting, and execution."
edition = "2021"
homepage = "https://tribeca.so"
repository = "https://github.com/TribecaHQ/tribeca"
authors = ["Tribeca Team <team@tribeca.so>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "governance", "tribeca"]

[lib]
crate-type = ["cdylib", "lib"]
name = "govern"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.21"
anchor-spl = ">=0.21"
num-traits = "0.2"
smart-wallet = { version = "^0.6", features = ["cpi"] }
vipers = "1.6"

[dev-dependencies]
proptest = { version = "1.0" }
