[package]
name = "govern"
version = "0.5.3"
description = "Handles proposal creation, lifecycle, voting, and execution."
edition = "2021"
homepage = "https://tribeca.so"
repository = "https://github.com/TribecaHQ/tribeca"
authors = ["Tribeca Team <team@tribeca.so>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "governance", "tribeca"]

[lib]
crate-type = ["cdylib", "lib"]
name = "govern"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.22"
anchor-spl = ">=0.22"
num-traits = "0.2"
smart-wallet = { version = "^0.8", features = ["cpi"] }
vipers = "^2.0"

[dev-dependencies]
proptest = { version = "1.0" }
