[package]
name = "simple-voter"
version = "0.5.4"
description = "A simple Tribeca voter program where 1 token = 1 vote."
edition = "2021"
homepage = "https://tribeca.so"
repository = "https://github.com/TribecaHQ/tribeca"
authors = ["Tribeca Team <team@tribeca.so>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "governance", "tribeca"]

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_voter"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.22"
anchor-spl = ">=0.22"
govern = { path = "../govern", features = ["cpi"], version = "^0.5" }
smart-wallet = { version = "^0.9", features = ["cpi"] }
vipers = "^2.0"
